Fix transparent rendering of the cube

QOpenGLWidget::paintGL() docs hints that only certain things are reset,
which does not include the blending.

So any blending functions set are just by chance, and some recent changes
in Qt code might now leave other state behind.
E.g. the last thing Kubrick's code does is painting the labels, and
QPainter font rendering sets the blending src/dest pair to
GL_CONSTANT_COLOR, GL_ONE_MINUS_SRC_COLOR. Which then on the next
invocation of paintGL() is still set at least with Qt 6.7.0.
Resulting in undesired transparent display of the cube (and background).

BUG: 486085
FIXED-IN: 1.1.24050
(cherry picked from commit e38e5a0516088026b071eb2c2a1b6e56ed00136e)